--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -32,12 +32,13 @@
             android:layout_marginBottom="24dp"/>
 
         <!-- Email -->
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+        <com.google.android.material.textfield.TextInputEditText
             style="@style/AppEditText"
             android:id="@+id/etLoginEmail"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:hint="Email"
+            app:hintTextColor="@color/gray"
             android:layout_marginBottom="16dp"/>
 
         <!-- Password -->
