--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -57,6 +57,7 @@
 <!-- EditText Style -->
 <style name="AppEditText" parent="Widget.Material3.TextInputEditText.OutlinedBox">
     <item name="android:textColor">#000000</item>
+    <item name="android:textColorHint">@color/gray</item>
     <item name="android:textSize">16sp</item>
     <item name="android:padding">12dp</item>
 </style>
