--- a/app/src/main/res/layout/activity_user_registration.xml
+++ b/app/src/main/res/layout/activity_user_registration.xml
@@ -30,7 +30,7 @@
             android:layout_marginBottom="8dp" />
 
         <EditText
-            android:id="@+id/et_email"
+            android:id="@+id/etemail"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textEmailAddress"
@@ -46,7 +46,7 @@
             android:layout_marginBottom="8dp" />
 
         <EditText
-            android:id="@+id/et_password"
+            android:id="@+id/etpassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textPassword"
@@ -71,7 +71,7 @@
 
         <!-- Register Button -->
         <Button
-            android:id="@+id/btn_register"
+            android:id="@+id/btnRegister"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Create Account"
