--- a/app/src/main/res/layout/activity_user_registration.xml
+++ b/app/src/main/res/layout/activity_user_registration.xml
@@ -30,7 +30,7 @@
             android:layout_marginBottom="8dp" />
 
         <EditText
-            android:id="@+id/etemail"
+            android:id="@+id/etEmail"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textEmailAddress"
@@ -46,7 +46,7 @@
             android:layout_marginBottom="8dp" />
 
         <EditText
-            android:id="@+id/etpassword"
+            android:id="@+id/etPassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textPassword"
@@ -62,7 +62,7 @@
             android:layout_marginBottom="8dp" />
 
         <EditText
-            android:id="@+id/etconfirm_password"
+            android:id="@+id/etConfirm_password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textPassword"
