--- a/app/src/main/res/layout/activity_user_registration.xml
+++ b/app/src/main/res/layout/activity_user_registration.xml
@@ -62,7 +62,7 @@
             android:layout_marginBottom="8dp" />
 
         <EditText
-            android:id="@+id/etConfirm_password"
+            android:id="@+id/etConfirmPassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textPassword"
