--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -21,6 +21,6 @@
     <color name="admin_green">#4CAF50</color>
     <color name="admin_blue">#2196F3</color>
     <!-- Your Block Button colors -->
-    <color name="block_red">#FF5722</color>
-    <color name="unblock_green">#4CAF50</color>
+    <color name="colorBlockRed">#FF5722</color>
+    <color name="colorUnblockGreen">#4CAF50</color>
 </resources>
