--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,6 +14,7 @@
     <color name="text_primary">#212121</color>
     <color name="text_secondary">#757575</color>
     <color name="gray">#9E9E9E</color>
+    <color name="purple_500">#6200EE</color> <!-- Added -->
 
     <!-- Admin colors -->
     <color name="admin_red">#F44336</color>
