--- a/app/src/main/res/layout/activity_cv_webview.xml
+++ b/app/src/main/res/layout/activity_cv_webview.xml
@@ -11,13 +11,18 @@
     <ProgressBar
         android:id="@+id/progressBar"
         style="?android:attr/progressBarStyleHorizontal"
-        android:layout_width="match_parent"
-        android:layout_height="4dp"
-        android:indeterminate="false"
+        android:layout_width="200dp"
+        android:layout_height="8dp"
+        android:layout_gravity="center"
         android:progress="0"
+        android:max="100"
+        android:indeterminate="false"
         android:visibility="gone"
-        android:progressTint="@color/purple_500" />
-
+        android:progressTint="@color/purple_500"
+        android:backgroundTint="@android:color/darker_gray"
+        android:layout_margin="16dp"
+        android:scaleY="2" />
+    
     <!-- WebView -->
     <WebView
         android:id="@+id/webView"
