--- a/app/src/main/res/layout/activity_cv_webview.xml
+++ b/app/src/main/res/layout/activity_cv_webview.xml
@@ -1,36 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:padding="8dp"
     android:background="#FFFFFF">
 
-    <!-- Progress bar for WebView loading -->
+    <!-- Progress bar for WebView loading - Centered at top -->
     <ProgressBar
         android:id="@+id/progressBar"
         style="?android:attr/progressBarStyleHorizontal"
-        android:layout_width="200dp"
-        android:layout_height="20dp"
-        android:layout_gravity="center"
+        android:layout_width="match_parent"
+        android:layout_height="4dp"
+        android:layout_alignParentTop="true"
         android:progress="0"
         android:max="100"
         android:indeterminate="false"
         android:visibility="gone"
         android:progressTint="@color/purple_500"
-        android:backgroundTint="@android:color/darker_gray"
-        android:layout_margin="16dp"
-        android:scaleY="2" />
-    
-    <!-- WebView -->
+        android:backgroundTint="@android:color/darker_gray" />
+
+    <!-- WebView takes remaining space -->
     <WebView
         android:id="@+id/webView"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:overScrollMode="never" />
+        android:layout_height="match_parent"
+        android:layout_below="@id/progressBar"
+        android:overScrollMode="never"
+        android:focusable="true"
+        android:focusableInTouchMode="true" />
 
-   
-
-</LinearLayout>
+</RelativeLayout>
