--- a/app/src/main/res/layout/activity_resume_generation.xml
+++ b/app/src/main/res/layout/activity_resume_generation.xml
@@ -32,7 +32,7 @@
             android:hint="Paste your current resume text here..."
             android:gravity="top"
             android:inputType="textMultiLine"
-            android:background="@drawable/edit_text_border" />
+            android:background="@android:color/white" />
 
         <TextView
             android:layout_width="match_parent"
@@ -49,7 +49,7 @@
             android:hint="Paste the job description here..."
             android:gravity="top"
             android:inputType="textMultiLine"
-            android:background="@drawable/edit_text_border" />
+            android:background="@android:color/white" />
 
         <Button
             android:id="@+id/btnGenerateResume"
@@ -71,7 +71,7 @@
         <ScrollView
             android:layout_width="match_parent"
             android:layout_height="200dp"
-            android:background="@drawable/edit_text_border">
+            android:background="@android:color/white">
 
             <TextView
                 android:id="@+id/tvGeneratedResume"
