--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,7 @@
     <color name="primary">#6200EE</color>
     <color name="primary_variant">#3700B3</color>
     <color name="secondary">#03DAC6</color>
+    <color name="success">#4CAF50</color> <!-- Material green -->
     <color name="secondary_variant">#018786</color>
 
     <!-- Background / Text -->
