--- a/app/src/main/res/layout/activity_resume_generation.xml
+++ b/app/src/main/res/layout/activity_resume_generation.xml
@@ -101,6 +101,12 @@
                 android:textColor="#333333"
                 android:layout_marginBottom="8dp" />
 
+            <TextView
+                android:id="@+id/creditText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Credits: --" />
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
