--- a/app/src/main/res/layout/activity_resume_generation.xml
+++ b/app/src/main/res/layout/activity_resume_generation.xml
@@ -105,7 +105,7 @@
                 android:id="@+id/creditText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Credits: --" />
+                android:text="Credits: ${credits}" />
 
             <LinearLayout
                 android:layout_width="match_parent"
