--- a/app/src/main/res/xml/network_security_config.xml
+++ b/app/src/main/res/xml/network_security_config.xml
@@ -1,11 +1,6 @@
 <network-security-config>
-    <!-- Allow HTTPS traffic to your API -->
-    <domain-config cleartextTrafficPermitted="true">
-        <domain includeSubdomains="true">resume-writer-api.onrender.com</domain>
-    </domain-config>
-
-    <!-- Trust normal system and user certificates -->
-    <base-config cleartextTrafficPermitted="false">
+    <!-- Allow ALL cleartext traffic for now -->
+    <base-config cleartextTrafficPermitted="true">
         <trust-anchors>
             <certificates src="system"/>
             <certificates src="user"/>
