--- a/app/src/main/res/layout/activity_resume_generation.xml
+++ b/app/src/main/res/layout/activity_resume_generation.xml
@@ -312,7 +312,10 @@
 
             <ScrollView
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                 android:layout_weight="1"
+                android:fillViewport="true"
+                android:padding="8dp">
 
                 <TextView
                     android:id="@+id/tvGeneratedResume"
