--- a/app/src/main/res/layout/activity_resume_generation.xml
+++ b/app/src/main/res/layout/activity_resume_generation.xml
@@ -338,8 +338,8 @@
                     android:lineSpacingExtra="4dp"
                     android:focusable="true"
                     android:focusableInTouchMode="true"
-                    android:scrollbars="vertical"
-                    android:movementMethod="scrollingMovementMethod" />
+                    android:scrollbars="vertical" />
+                    
             </ScrollView>
 
         </LinearLayout>
