--- a/app/src/main/res/layout/activity_resume_generation.xml
+++ b/app/src/main/res/layout/activity_resume_generation.xml
@@ -316,6 +316,7 @@
             android:focusableInTouchMode="true">
 
             <ScrollView
+                android:id="@+id/scrollView" 
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:fillViewport="true"
